Modificacion logo y body

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <div class="contendor-total-1">
                 <div class="contendor-total-2">
                     <div class="contenedor-partes-1">
-                        <!-- <img src="./img/icono.jpeg" /> -->
-                        <h1>LOGIN VIEW</h1>
+                        <img src="../img/logo.png" />
                     </div>
                     <div class="contenedor-partes-2">
                         <form action="" method="POST">
